--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Menu</title>
+    <title>Le'lesan Waterfront Resort | Kesses</title>
+    <meta name="description" content="Experience the tranquility of Le'lesan Waterfront Resort. Nestled by the serene lakeside, we offer luxurious accommodations, fine dining, and breathtaking views.">
+    <meta name="keywords" content="Le'lesan Waterfront Resort, kesses resort, waterfront dining, serene resort, tranquil vacation">
+    <meta name="author" content="Le'lesan Waterfront Resort">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Le'lesan Waterfront Resort | kesses">
+    <meta property="og:description" content="Discover serenity and luxury at Le'lesan Waterfront Resort. Enjoy fine dining, scenic views, and unparalleled comfort by the lake.">
+    <meta property="og:image" content="URL_to_image.jpg">
+    <meta property="og:url" content="https://lelesan.vercel.app">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Le'lesan Waterfront Resort | Serene Lakeside Retreat">
+    <meta name="twitter:description" content="Indulge in luxury and tranquility at Le'lesan Waterfront Resort. Your perfect lakeside getaway awaits.">
+    <meta name="twitter:image" content="URL_to_image.jpg">
+    <link rel="canonical" href="https://lelesan.vercel.app">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
