--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div> -->
 
         <footer>
-            <p>© 2024 Le'lesan waterfront Resort </br>x </br>Kylex inc. </br> All rights reserved.</p>
+            <p>© 2024 Le'lesan x Kylex inc. </br> All rights reserved.</p>
         </footer>
     </div>
 </body>
